# nx2-puzzle-code

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Algorithms/: general.cpp  optimalSolution.cpp  partition.cpp  solveRow.cpp
Algorithms/kColor/: colorByColor.cpp  generateBoardState.cpp  generateBoardState.h  rowByRow.cpp  rowByRow.h
Algorithms/numbered/: divideAndConquer.cpp  divideOnce.cpp  divideOnce.h  generateBoardState.cpp  rowByRow.cpp
Algorithms/tests/: kColor.cpp  numbered.cpp
Algorithms/twoColor/: generateBoardState.cpp  partitionOnce.cpp  rowByRow.cpp
TestResults/: numbered.csv
WebAPI/: API.cpp  index.html  script.js  styles.css
src/Algorithms/: general.h  optimalSolution.h  partition.cpp  partition.h  solveRow.cpp  solveRow.h
src/Algorithms/kColor/: colorByColor.cpp  colorByColor.h
src/Algorithms/numbered/: divideAndConquer.h  divideOnce.cpp  generateBoardState.cpp  generateBoardState.h  rowByRow.h
src/Algorithms/tests/: kColor.h  numbered.h  twoColor.cpp  twoColor.h
src/Algorithms/twoColor/: generateBoardState.h  partitionOnce.h  rowByRow.cpp  rowByRow.h
src/TestResults/: Plots.ipynb  kColor_fixedK.csv  twoColor.csv
src/WebAPI/: API.h  index.html  styles.css
